--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProAuctionNg</title>
+  <title>Auction </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://bulma.io/css/bulma-docs.min.css?v=202009101917">
 </head>
 <body>
+  
   <app-root></app-root>
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </body>
 </html>
